hodge podge of things - chakra@next fixes, dark mode needs fixing, lots of things need fixing

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.image {
+.image:hover {
   -webkit-animation: spin 4s linear infinite;
   -moz-animation: spin 4s linear infinite;
   animation: spin 4s linear infinite;
